# HomeWork11

./: .gitignore  config.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 01a391d4159d_add_column_user_to_contact.py  77a189f091f5_users.py  96ef2a061af0_added_contacts_tables.py  a2bd4f104bee_add_users_table2.py  dc3b1563a8fe_add_column_confirmed_to_user.py  dfa8e2159abd_add_users_table.py  ecf1ea6ce68e_add_users.py
src/: schemas.py
src/database/: db.py
src/models/: contacts.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py  roles.py
